--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ h11==0.14.0
 idna==3.4
 outcome==1.2.0
 packaging==23.1
+pick==2.2.0
 PySocks==1.7.1
 python-dotenv==1.0.0
 python-http-client==3.3.7
