--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,11 @@ charset-normalizer==3.2.0
 exceptiongroup==1.1.3
 h11==0.14.0
 idna==3.4
+mysql-connector-python==8.1.0
 outcome==1.2.0
 packaging==23.1
 pick==2.2.0
+protobuf==4.21.12
 PySocks==1.7.1
 python-dotenv==1.0.0
 python-http-client==3.3.7
